Styling & fix html structure on pagination links
Add whitespace around pagination links
Add right/left borders on prev/next
Move <nav> element outside of the table

--- a/app/assets/stylesheets/global_overrides.scss
+++ b/app/assets/stylesheets/global_overrides.scss
@@ -46,3 +46,24 @@ main {
     }
   }
 }
+
+.pagination {
+  text-align: right;
+
+  .page {
+    padding: 0.2em 0.5em;
+
+    &.active {
+      font-weight: bold;
+    }
+
+    &.prev {
+      border-right: 1px solid $border-colour;
+      padding-left: inherit;
+    }
+    &.next {
+      border-left: 1px solid $border-colour;
+      padding-right: inherit;
+    }
+  }
+}
